cameleon-impl/tests/macros/wrong_ty_attr.stderr
error: specified len doesn't fit with specified ty
 --> $DIR/wrong_ty_attr.rs:5:22
  |
5 |     #[register(len = 2, access = RO, ty = u32)]
  |                      ^
